--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ ul {
     width: 90vw;
 }
 
-li {
+.card {
+    position: relative;
     display: flex;
     width: 117px;
     height: 146px;
@@ -67,12 +68,46 @@ li {
 
 img {
     height: 100px;
-    margin: auto;
+    width: 100%;
 }
+
+.face {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: all .5s;
+    transform-style: preserve-3d;
+  }
+
+  .back-face {
+    transform: rotateY(180deg);
+  }
+
+  .card:hover .back-face {
+    transform: rotateY(0deg);
+  }
+
+  .card:hover .front-face {
+    transform: rotateY(-180deg);
+  }
 
 @media (max-width: 425px) {
     ul {
         flex-direction: column;
         align-items: center;
     }
+}
+
+/* ---------------------------------------
+------------------------------------------
+                For scripts 
+------------------------------------------
+----------------------------------------*/
+
+.hidden{
+    display: none;
 }
