--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #E5E5E5;
@@ -15,6 +14,7 @@ body {
 
 header {
     display: flex;
+    flex-direction: column;
     margin: 40px 0;
 }
 
@@ -23,6 +23,11 @@ header h1 {
     font-size: 56px;
     margin: 0 auto;
     text-align: center;
+    color: var(--title-color);
+}
+
+header p {
+    margin-left: 80%;
     color: var(--title-color);
 }
 
@@ -103,6 +108,6 @@ img {
     transform: rotateY(0deg);
 }
 
- .found{
+.found {
     transform: rotateY(-180deg);
- }
+}
