--- a/style.css
+++ b/style.css
@@ -26,8 +26,19 @@ header h1 {
     color: var(--title-color);
 }
 
-header p {
-    margin-left: 80%;
+.timer{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-right: 15%;
+}
+
+.timer_icon{
+    color: var(--title-color);
+    margin-right: 5px;
+}
+
+.timer p {
     color: var(--title-color);
 }
 
@@ -62,9 +73,14 @@ ul {
     transition: all 1s;
 }
 
-img {
+.back-face img {
     height: 100px;
     width: 100%;
+}
+
+.front-face img {
+    height: 80px;
+    width: 80%;
 }
 
 .face {
@@ -87,6 +103,10 @@ img {
     ul {
         flex-direction: column;
         align-items: center;
+    }
+
+    .timer{
+        margin: auto;
     }
 }
 
